--- a/.github/workflows/auto_deploy.yml
+++ b/.github/workflows/auto_deploy.yml
@@ -24,10 +24,10 @@ jobs:
       # Runs a single command using the runners shell
       - name: installing Node
         uses: actions/setup-node@v2-beta
-       with:
+        with:
          node-version:12
       # Runs a set of commands using the runners shell
       - name: installing surge
         run: npm --global surge
-        name:deploying using surge
-        run: surge ./ bootcamp2020_project1.surge.sh --token ${{secrets.SURGE_TOKEN}}
+        name: deploying using surge
+         run: surge ./ first-project2020.surge.sh/.surge.sh --token ${{secrets.SURGE_TOKEN}}
