--- a/.github/workflows/auto_deploy.yml
+++ b/.github/workflows/auto_deploy.yml
@@ -28,6 +28,6 @@ jobs:
          node-version:12
       # Runs a set of commands using the runners shell
       - name: installing surge
-        run: npm --global surge
+        run: npm install --global surge
         name: deploying using surge
-         run: surge ./ first-project2020.surge.sh/.surge.sh --token ${{secrets.SURGE_TOKEN}}
+         run: surge ./ first-project2020.surge.sh --token ${{secrets.SURGE_TOKEN}}
