--- a/.github/workflows/deploy_surge.yaml
+++ b/.github/workflows/deploy_surge.yaml
@@ -23,7 +23,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Intall nodeJS
-        uses: action/setup-node@v2-beta
+        uses: actions/setup-node@v2-beta
         with:
           node-version: 12
       - name: Install surge
